--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "notetaker",
   "version": "1.0.0",
   "description": "Note taking app",
-  "main": "index.js",
+  "main": "script.js",
   "scripts": {
+    "start": "node script.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
